<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/background_gradient"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/connect"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:background="@drawable/background_gradient">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="27dp"
            android:background="@color/transparent"
            android:src="@drawable/menu" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/imagemgrande" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/john_bergen"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/new_york_ny"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/connections"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_above="@id/connect"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/connectionTitle"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/imagem1" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/imagem2" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/imagem3" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/imagem4" />


        </LinearLayout>

        <TextView
            android:id="@+id/connectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/connections"
            android:textColor="@color/startUp"
            android:textSize="16sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_above="@id/connections"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/about"
            android:textColor="@color/startUp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lorem"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@+id/about"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:textStyle="normal"
            android:text="@string/textlorem"
            android:textColor="@color/texttela4"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_marginHorizontal="95dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lorem"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/twitter" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/instagram" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/facebook" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/google" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>